--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 		<div class="loader" id="loader">
 			<span class="loader_ico"></span>
 		</div>
+		@@include('./partials/popups/tooltip.html')
 		@@include('./partials/popup-wrap.html')
 		@@include('./partials/script.html')
 	</body>
