--- a/src/products.html
+++ b/src/products.html
@@ -23,6 +23,7 @@
 		<div class="loader" id="loader">
 			<span class="loader_ico"></span>
 		</div>
+		@@include('./partials/popups/tooltip.html')
 		@@include('./partials/popup-wrap.html')
 		@@include('./partials/script.html')
 	</body>
