--- a/dest/contact.html
+++ b/dest/contact.html
@@ -270,7 +270,7 @@
 			
 			<div class="row my-5">
 				<div class="col-md-3">
-					<img src="../images/images/45.JPG" alt="" />
+					<img src="../images/images/good2.png" alt="" />
 				</div>
 				<div class="col-md-8">
 					<div class="row">
@@ -761,7 +761,7 @@
 			
 			<a href="product.html" class="row my-5">
 				<div class="col-md-3 product-item_big_image pb-md-0 pb-3">
-					<img src="../images/images/45.JPG" alt="" />
+					<img src="../images/images/good2.png" alt="" />
 				</div>
 				<div class="col-md-9 search-description">
 					<div class="row">
