--- a/dest/index.html
+++ b/dest/index.html
@@ -205,7 +205,7 @@
 	<div class="col-md-3">
 		<div class="product-item_big">
 		<a href="product.html" class="product-item_big_image">
-			<img src="../images/images/45.JPG" alt="" />
+			<img src="../images/images/good2.png" alt="" />
 		</a>
 		<div class="product-item_big_description">
 			<a href="product.html" class="product-item_name">Reebok Track Jacket</a>
@@ -368,7 +368,7 @@
 <div class="col-md-4">
 	<div class="product-item_little justify-content-md-start justify-content-center">
 		<a href="product.html" class="product-item_little_image">
-			<img src="../images/images/45.JPG" alt="" />
+			<img src="../images/images/good2.png" alt="" />
 		</a>
 		<div class="vr"></div>
 		<div class="product-item_little_description">
@@ -561,7 +561,7 @@
 			
 			<div class="row my-5">
 				<div class="col-md-3">
-					<img src="../images/images/45.JPG" alt="" />
+					<img src="../images/images/good2.png" alt="" />
 				</div>
 				<div class="col-md-8">
 					<div class="row">
@@ -1052,7 +1052,7 @@
 			
 			<a href="product.html" class="row my-5">
 				<div class="col-md-3 product-item_big_image pb-md-0 pb-3">
-					<img src="../images/images/45.JPG" alt="" />
+					<img src="../images/images/good2.png" alt="" />
 				</div>
 				<div class="col-md-9 search-description">
 					<div class="row">
