--- a/dest/product.html
+++ b/dest/product.html
@@ -115,7 +115,7 @@
 			</div>
 			
 			<div class="desc-gallery_image" data-product-gallery-item>
-				<img src="../images/images/45.JPG" alt="" />
+				<img src="../images/images/good2.png" alt="" />
 			</div>
 			
 			<div class="desc-gallery_image" data-product-gallery-item>
@@ -253,7 +253,7 @@
 	<div class="col-md-3">
 		<div class="product-item_big">
 		<a href="product.html" class="product-item_big_image">
-			<img src="../images/images/45.JPG" alt="" />
+			<img src="../images/images/good2.png" alt="" />
 		</a>
 		<div class="product-item_big_description">
 			<a href="product.html" class="product-item_name">Reebok Track Jacket</a>
@@ -473,7 +473,7 @@
 			
 			<div class="row my-5">
 				<div class="col-md-3">
-					<img src="../images/images/45.JPG" alt="" />
+					<img src="../images/images/good2.png" alt="" />
 				</div>
 				<div class="col-md-8">
 					<div class="row">
@@ -964,7 +964,7 @@
 			
 			<a href="product.html" class="row my-5">
 				<div class="col-md-3 product-item_big_image pb-md-0 pb-3">
-					<img src="../images/images/45.JPG" alt="" />
+					<img src="../images/images/good2.png" alt="" />
 				</div>
 				<div class="col-md-9 search-description">
 					<div class="row">
