--- a/dest/products.html
+++ b/dest/products.html
@@ -255,7 +255,7 @@
 	<div class="col-lg-4 col-sm-6">
 		<div class="product-item_big">
 		<a href="product.html" class="product-item_big_image">
-			<img src="../images/images/45.JPG" alt="" />
+			<img src="../images/images/good2.png" alt="" />
 		</a>
 		<div class="product-item_big_description">
 			<a href="product.html" class="product-item_name">Reebok Track Jacket</a>
@@ -618,7 +618,7 @@
 			
 			<div class="row my-5">
 				<div class="col-md-3">
-					<img src="../images/images/45.JPG" alt="" />
+					<img src="../images/images/good2.png" alt="" />
 				</div>
 				<div class="col-md-8">
 					<div class="row">
@@ -1109,7 +1109,7 @@
 			
 			<a href="product.html" class="row my-5">
 				<div class="col-md-3 product-item_big_image pb-md-0 pb-3">
-					<img src="../images/images/45.JPG" alt="" />
+					<img src="../images/images/good2.png" alt="" />
 				</div>
 				<div class="col-md-9 search-description">
 					<div class="row">
